local storage removed added database configs

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=MedicalTracking
 
+# --- Server ayarları ---
+server.port=8081
+
 # --- MySQL ba?lant? ayarlar? ---
 spring.datasource.url=jdbc:mysql://localhost:3306/medicaltracking
 spring.datasource.username=root
